php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #39035 Compatibilty issue between DOM and zend.ze1_compatibility_mode?
Submitted: 2006-10-04 10:46 UTC Modified: 2006-10-04 12:05 UTC
From: email_ylb-php at yahoo dot fr Assigned:
Status: Closed Package: PHP options/info functions
PHP Version: 5.1.6 OS: Windows 2003 server
Private report: No CVE-ID: None
 [2006-10-04 10:46 UTC] email_ylb-php at yahoo dot fr
Description:
------------
For my developments, I need to turn on the PHP option "zend.ze1_compatibility_mode". However when using DOM classes from PHP5, I am unable to get references to some properties (e.g. documentElement) of a DOMDocument object (see example below). 

Is it inappropriate to use DOM classes with this option? If so, I appologize for my post.

Reproduce code:
---------------
$doc =& new DOMDocument(); 
$success = $doc->load($inputFile);
$root =& $doc->documentElement;

echo("With \$root, the root element is " . $root->nodeName . ".<br />");
echo("With \$doc, the root element is " .$doc->documentElement->nodeName . ".<br />");

Expected result:
----------------
With $root, the root element is myRootNode.
With $doc, the root element is myRootNode.

Actual result:
--------------
With $root, the root element is .
With $doc, the root element is myRootNode.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-10-04 11:26 UTC] tony2001@php.net
I don't think anybody is willing to work on ze1_compatibility_mode, because it is supposed to be dropped in the nearest future.
 [2006-10-04 12:05 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

fixed as it was a cut/paste error
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 00:00:03 2026 UTC