fix bug #39035 (Compatibilty issue between DOM and ze1_compatibility_mode